# os_lab1

lab/main/: CMakeLists.txt  main.cpp  main.sln
lab/main/main/: main.cpp  main.vcxproj
lab/main/main/x64/Debug/: main.exe.recipe  main.ilk  vc143.idb
lab/main/main/x64/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  main.lastbuildstate
lab/n/: CMakeLists.txt  n.sln  number.cpp  number.h
lab/n/n/: n.vcxproj  n.vcxproj.filters  number.cpp  number.h
lab/n/n/x64/Debug/n.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  n.lastbuildstate
lab/n/x64/Debug/: n.idb  n.lib
lab/v/: CMakeLists.txt  v.sln  vector.cpp  vector.h
lab/v/v/: v.vcxproj  v.vcxproj.filters  vector.cpp  vector.h
lab/v/v/x64/Debug/: v.dll.recipe  v.ilk  vc143.idb
lab/v/v/x64/Debug/v.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  v.lastbuildstate  v.write.1u.tlog
lab/v/x64/Debug/: v.exp  v.lib
